--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mysql://localhost:3307/sprint1?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sprint1?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=alcachofa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -13,3 +13,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
 
+# Configura el nivel de log para ver los endpoints mapeados
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=DEBUG
+
+management.endpoints.web.exposure.include=mappings
